@@ -16,7 +16,10 @@ KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
 
 DEPEND="!!<sys-fs/squash_dir-3.2"
-RDEPEND="${DEPEND}"
+# the last dependency is not really needed, but without it the output is ugly,
+# and the costs are really not high: sys-apps/gentoo-functions is tiny
+RDEPEND="${DEPEND}
+|| ( sys-apps/gentoo-functions sys-apps/openrc )"
 IUSE=""
 
 src_prepare() {
