@@ -1,1 +1,1 @@
-DIST duckduckgo_plus-0.3.8-fx.xpi 320988 SHA256 fd7f67cde479c12911eb7cdfc88ecf1529d1617a02c691f8d4536760b9986fdb SHA512 bcb5c92286254ec8ceab92e76af12ad1bc5ca1d857d9d9e5427da946c786c03365a2c33fb157cbc5306365aa9b768583b59a253d914296b196f2551ff378f139 WHIRLPOOL e64c19ddea4d1d9ab9bd688ffa7fea8933a73a56e03f5b391f4f1b3f25e6030b275af4b4045c1962cf13352e0a488a3045df4b94ed993f1e846606ed5e9745cf
+DIST duckduckgo_plus-0.3.15-fx.xpi 123922 SHA256 508d584b5a43fdcbb2fa406da6a9669612418b9b491f3d3a32e4b4bed643a3d3 SHA512 ca74d1caec1c3ec318621d450a3f275e4febb6365a53527a3707a7fbb454b9116505518b11fd9056c292c5b61425fc7bfd2b542629a23096ac878b1b62b49bd3 WHIRLPOOL 8555e77e0f1a0e70174df559a6de73612ab50248974cd61be6eac15bc7763da503447d32ab969eac7c658f92bebffd5523829f73be42f53f6f31644e1184e6b7
