@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*duckduckgo-0.3.15 (14 Mar 2014)
+
+  14 Mar 2014; Martin Väth <martin@mvath.de>:
+  Bump version. Remove old ebuild.
+
 *duckduckgo-0.3.8 (30 Oct 2013)
 
   30 Oct 2013; Martin Väth <martin@mvath.de>:
